--- a/frontend-gui/package.json
+++ b/frontend-gui/package.json
@@ -20,7 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker-compose-dev-build": "docker-compose -f docker-compose.dev.yml build",
+    "docker-compose-dev-up": "docker-compose -f docker-compose.dev.yml up",
+    "docker-compose-dev-down": "docker-compose -f docker-compose.dev.yml down"
   },
   "eslintConfig": {
     "extends": [
