add kafka to the dev docker compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -34,3 +34,25 @@ services:
     volumes:
       - ./kafka-websocket/src:/app/src
 
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+    ports:
+      - "2181:2181"
+      
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    depends_on:
+      - zookeeper
+
