--- a/kafka-websocket/package.json
+++ b/kafka-websocket/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
       "express": "^4.18.2",
       "kafkajs": "^2.2.4",
-      "ws": "^8.16.0"
+      "ws": "^8.16.0",
+      "dotenv": "^9.0.2"
     }
   }
