edit dockerfiles and docker compose files

--- a/mysql_database/docker-compose.yml
+++ b/mysql_database/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     container_name: solarx-db
     restart: always
     environment:
-      # MYSQL_DATABASE: 'solarx'
-      MYSQL_USER: 'dyab'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_DATABASE: ${DATABASE_NAME}
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
     ports:
       - '3306:3306'
     expose:
@@ -19,6 +19,19 @@ services:
       - solarx-db:/var/lib/mysql
       - "/etc/timezone:/etc/timezone:ro" 
       - "/etc/localtime:/etc/localtime:ro"
+
+  phpmyadmin:
+    image: phpmyadmin:5.2
+    container_name: solarx-phpmyadmin
+
+    ports:
+      - 800:80
+
+    environment:
+      - PMA_ARBITRARY=1
+
+    restart: unless-stopped
+
 
 volumes:
   solarx-db:
