--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,22 +38,24 @@ services:
 
     depends_on:
       - kafka
-      # - solarx-python-data-stream
+      - solarx-python-data-stream
 
 
 
-  # solarx-python-data-stream:
-  #   container_name: solarx-python-data-stream
-  #   build:
-  #     context: ./
-  #     dockerfile: Dockerfile
+  solarx-python-data-stream:
+    container_name: solarx-python-data-stream
+    build:
+      context: ./
+      dockerfile: Dockerfile
 
 
-  #   volumes:
-  #     - ./:/usr/app/src
+    volumes:
+      - ./:/usr/app/src
 
-  #   depends_on:
-  #     - kafka
+    depends_on:
+      - kafka
+
+      
 
 
 
@@ -66,6 +68,9 @@ services:
         hard: 65536
     ports:
       - "2181:2181"
+    
+    networks:
+      - solarx-network
       
   kafka:
     image: wurstmeister/kafka
@@ -78,3 +83,10 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     depends_on:
       - zookeeper
+    
+    networks:
+      - solarx-network
+
+
+networks:
+  solarx-network:
