--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   solarx-gui:
     container_name: gui
@@ -16,6 +14,9 @@ services:
     volumes:
       - ./frontend-gui/src:/app/src
 
+    networks:
+      - solarx-network
+
 
   solarx-backend:
     container_name: backend
@@ -26,11 +27,11 @@ services:
 
     command: npm run dev
 
-    ports:
-      - 8000:8000
-      - 8080:8080
-      - 9090:9090
-      - 9191:9191
+    # ports:
+    #   - 8000:8000
+    #   - 8080:8080
+    #   - 9090:9090
+    #   - 9191:9191
 
 
     volumes:
@@ -39,6 +40,9 @@ services:
     depends_on:
       - kafka
       - solarx-python-data-stream
+
+    networks:
+      - solarx-network
 
 
 
@@ -54,6 +58,9 @@ services:
 
     depends_on:
       - kafka
+
+    networks:
+      - solarx-network
 
       
 
@@ -90,3 +97,5 @@ services:
 
 networks:
   solarx-network:
+    name: solarx-network
+    external: true
