--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -18,7 +18,7 @@ http {
         }
 
         location /ws/ {
-            proxy_pass  http://websocket_server:8080;
+            proxy_pass  http://nginx_websocket_server:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
