change server name

--- a/nginx_websocket_server.conf
+++ b/nginx_websocket_server.conf
@@ -22,7 +22,7 @@ http {
     server {
         listen 8080;
 
-        server_name websocket_server;
+        server_name nginx_websocket_server;
     
         location /ws1/ {
             proxy_pass http://websocket_8080;
